fix layout issue

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -84,7 +84,7 @@ button {
 /* APP */
 #root {
 	@media (hover: hover) and (pointer: fine) {
-		height: 100vh;
+		min-height: 100vh;
 	}
 	background: #3e5151; /* fallback for old browsers */
 	background: -webkit-linear-gradient(
@@ -103,7 +103,7 @@ button {
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
-	height: 100%;
+	min-height: 100vh;
 	width: 100%;
 	padding: 0 2.4rem 0 2.4rem;
 	gap: 3.2rem;
